syntax = "proto3";

package user;

option go_package = "proto;user";

service User {
  rpc Login(LoginRequest) returns(LoginResponse);
  rpc Signup(SignupRequest) returns(SignupResponse);
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  int64 err = 1;
  string msg = 2;
  JwtToken data = 3;
}

message JwtToken {
  string token = 1;
}

message SignupRequest {
  string username = 1;
  string password = 2;
  string nickname = 3;
  string avatar = 4;
}

message SignupResponse {
  int64 err = 1;
  string msg = 2;
  JwtToken data = 3;
}